# hello_physx_vcpkg

./: CMakeLists.txt  README.md  main.cpp
